#89: Some minor refactorings